# qsv-docopt

./: Cargo.toml  README.md  rustfmt.toml
examples/: cargo.rs  cp.rs  decode.rs  hashmap.rs  optional_command.rs  verbose_multiple.rs
src/: dopt.rs  lib.rs  parse.rs  synonym.rs  utils.rs  wordlist.rs
src/test/: mod.rs  suggestions.rs  testcases.rs
