[package]
name = "qsv_docopt"
version = "1.7.0" #:version
authors = [
    "Andrew Gallant <jamslam@gmail.com>",
    "Joel Natividad <joel@datHere.com>",
]
description = "Command line argument parsing."
documentation = "https://docs.rs/qsv_docopt"
homepage = "https://github.com/jqnatividad/docopt.rs"
repository = "https://github.com/jqnatividad/docopt.rs"
readme = "README.md"
keywords = ["docopt", "argument", "command", "argv"]
categories = ["command-line-interface"]
license = "Unlicense/MIT"
exclude = ["/Makefile", "/scripts/*"]
edition = "2021"
rust-version = "1.77.0"

[lib]
name = "qsv_docopt"

[[bin]]
name = "docopt-wordlist"
path = "src/wordlist.rs"
doc  = false
test = false

[dependencies]
regex  = "1"
serde  = { version = "1", features = ["derive"] }
strsim = "0.11"
ahash  = "0.8"
